MIR-6790 feat: add template annotations and optional parameters
